# MQTTClient

./: .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Docker.makefile  InstallCMake.makefile  Makefile  README.md  WORKFLOWS.md  makefile  vcpkg-configuration.json  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  handle-array.yml  issue-handler.yml  setup-labels.yml  version-update.yml
app/: CMakeLists.txt  app.cpp
cmake/: Config.cmake  Sanitizer.cmake  Tools.cmake
docker/mosquitto/: .gitignore
docker/mosquitto/config/: mosquitto.conf  passwd
mqttclient/: CMakeLists.txt  monitor.hpp  mqttclient.cpp  mqttclient.hpp  types.hpp
mqttclient/cmake/: MQTTClientConfig.cmake.in
test/: CMakeLists.txt  mqttclient.test.cpp
vcpkg-custom/ports/libuuid/: CMakeLists.txt
